--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,11 @@
           class="ui positive right floated button">
     Submit link
   </button>
-
 </form>
+
+<div  class="ui grid posts">
+  <app-article>
+  </app-article>
+</div>
 
 
