--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,9 @@
 </form>
 
 <div  class="ui grid posts">
-  <app-article>
-  </app-article>
+    <div *ngFor="let article of articles">
+      <app-article [article]="article"></app-article>
+    </div>
 </div>
 
 
