Fixed article component display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,11 @@
 </form>
 
 <div  class="ui grid posts">
-    <div *ngFor="let article of articles">
-      <app-article [article]="article"></app-article>
-    </div>
+  <app-article
+    *ngFor="let article of articles"
+    [article]="article">
+  </app-article>
+
 </div>
 
 
